# manxxx

./: CMaketxt.BK  Makefile  README.md  bashref.sh
sharedLib/: CMakeLists.txt
sw/: CMakeLists.txt  Hello  Makefile  capmanPMD  capmanPMD.c  error_functions.c  error_functions.h  get_num.h  pshm_read.c  pshm_unlink.c  pshm_write.c  shm_read  shm_write
sw/Operator/: Cents.cpp  Cents.hpp  Fraction.cpp  Fraction.hpp  class_op.cpp  class_op.hpp  op  operator  operator.cpp
sw/fileIO/: c4copyfile  c4copyfile.c
sw/learnCpp/: a.out  stackOver  stackOver.c
sw/sharedmem/: a.out  cppProc.cpp  get_num.c  shm_unlink  tlpi_hdr.h
sw/sharedmem/shm_create/: pshm_create.c
sw/sharedmem/shm_read/: pshm_read.c
sw/testProc/: Bjack  Card.cpp  Card.hpp  Desk.hpp  Player.cpp  Player.hpp  backJack  backJack.cpp  lambda  lambda.cpp  oop.cpp  op  someClass.hpp
